--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.symphony.platformsolutions</groupId>
     <artifactId>symphony-opennlp-java</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <name>Symphony OpenNLP Client</name>
     <url>https://github.com/SymphonyPlatformSolutions/symphony-opennlp-java</url>
     <description>Symphony OpenNLP Client provided by Symphony Platform Solutions team</description>
@@ -20,9 +20,9 @@
 
     <developers>
         <developer>
-            <name>Manuela Caicedo</name>
-            <email>manuela.caicedo@symphony.com</email>
-            <organization>Symphony</organization>
+            <name>Symphony Platform Solutions</name>
+            <email>platformsolutions@symphony.com</email>
+            <organization>Symphony Communication Services</organization>
             <organizationUrl>https://symphony.com/</organizationUrl>
         </developer>
     </developers>
@@ -32,11 +32,16 @@
         <url>https://github.com/SymphonyPlatformSolutions/symphony-opennlp-java</url>
     </scm>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -53,6 +58,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
+                <version>3.0.1</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -65,6 +71,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.0.1</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -107,12 +114,12 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.9.4</version>
+            <version>2.9.9</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.22</version>
+            <version>1.7.25</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -123,7 +130,7 @@
         <dependency>
             <groupId>org.apache.opennlp</groupId>
             <artifactId>opennlp-tools</artifactId>
-            <version>1.8.4</version>
+            <version>1.9.1</version>
         </dependency>
     </dependencies>
 
@@ -137,6 +144,4 @@
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
-
-
 </project>
